# slicedbread-server

./: README.md
server/: .env.example  .gitignore  Cargo.toml
server/src/: constants.rs  main.rs  server.rs
