[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
hyper = { version = "1.6.0", features = ["full"] }
tokio = { version = "1.35", features = ["full"] }
uuid = { version = "1.4", features = ["v4"] }
hyper-util = { version = "0.1.15", features = ["full"]}
futures-util = "0.3.31"
bytes = "1"
http-body-util = "0.1.3"